examples/typechecking/effects.an
effect Log with
    log: fn String -> Unit

effect Use a with
    get: fn Unit -> a
    set: fn a -> Unit

// Expect `can Use Unit` and not `can Log`
handle_basic () = 
    handle log "test1"
    | log v -> set v

use_resume () =
    handle ()
    // Test these two 'resume's refer to two different variables
    // with incompatible types
    | get () -> resume 3i32
    | set _ -> resume ()

does_use x =
    y = get ()
    set (y + x)

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// effect Log with
//     (log: fn String -> Unit can Log): fn String -> Unit
// 
// effect Use a with
//     (get: fn Unit -> a can (Use a)): fn Unit -> a
//     (set: fn a -> Unit can (Use a)): fn a -> Unit
// 
// (handle_basic: fn Unit -> Unit can (Use String)) () =
//     handle (log: fn String -> Unit can Log) "test1"
//     | (log: fn String -> Unit can Log) (v: String) -> (set: fn String -> Unit can (Use String)) (v: String)
// 
// (use_resume: fn Unit -> Unit pure) () =
//     handle ()
//     | (get: fn Unit -> I32 can (Use I32)) () -> (resume: fn I32 -> Unit pure) 3_I32
//     | (set: fn I32 -> Unit can (Use I32)) (_: I32) -> (resume: fn Unit -> Unit pure) ()
// 
// (does_use: fn _ -> Unit can (Use _)) (x: _) =
//     (y: _) = (get: fn Unit -> _ can (Use _)) ()
//     (set: fn _ -> Unit can (Use _)) ((+: fn _ _ {Add _} -> _ pure) (y: _) (x: _) {(error)})

// expected stderr:
// examples/typechecking/effects.an:22:12
// 21 |     y = get ()
//    |     // error: Ambiguous implicit of type Add _ required by parameter 3 of +, type annotation required
// 22 |     set (y + x)
//    |            ^
// 
// Found 1 error and 0 warnings

